--- a/tareas/templates/tareas/registrar.html
+++ b/tareas/templates/tareas/registrar.html
@@ -9,17 +9,9 @@
     <h1>Registrar nueva Tarea</h1>
     <form method="post">
         {% csrf_token %}
-        <label>Título: </label><br>
-        <input type="text" name="titulo"><br><br>
-
-        <label>Descripción: </label><br>
-        <textarea name="descripcion"></textarea><br><br>
-
-        <label>Fecha límite: </label>
-        <input type="date" name="fecha_limite"><br><br>
-
+        {{form.as_p}} 
         <button type="submit">Guardar</button>
     </form>
-    <a href="{% url 'lista_tareas' %}">volver</a>
+    <a href="{% url 'lista_tareas' %}">volver a la lista</a>
 </body>
 </html>
