--- a/tareas/templates/tareas/lista.html
+++ b/tareas/templates/tareas/lista.html
@@ -14,7 +14,9 @@
         
         {% for tarea in tareas %}
             <li>
-                <strong>{{tarea.titulo}}</strong> - {{tarea.descripcion}} - Fecha límite: {{tarea.fecha_limite}}
+                <strong>{{tarea.titulo}}</strong> --- Fecha límite: {{tarea.fecha_limite}}
+                <a href="{% url 'editar_tarea' tarea.pk %}">Editar</a>
+                <a href="{% url 'eliminar_tarea' tarea.pk %}">Eliminar</a>
             </li>
         {% empty %}
             <li>No hay tareas registradas.</li>
