--- a/tareas/templates/tareas/eliminar_confirmar.html
+++ b/tareas/templates/tareas/eliminar_confirmar.html
@@ -1,4 +1,13 @@
-<h1>¿Estás seguro de que quieres eliminar esta tarea?</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Eliminar</title>
+    <link rel="stylesheet" href="{% static 'tareas/estilos.css' %}">
+</head>
+<body>
+    <h1>¿Estás seguro de que quieres eliminar esta tarea?</h1>
 
 <p>{{ tarea.titulo }}</p>
 
@@ -8,3 +17,6 @@
 </form>
 
 <a href="{% url 'lista_tareas' %}">No, volver</a>
+
+</body>
+</html>
