--- a/tareas/templates/tareas/lista.html
+++ b/tareas/templates/tareas/lista.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista Tareas</title>
+    <link rel="stylesheet" href="{% static 'tareas/estilos.css' %}">
+
 </head>
 <body>
     <h1>Lista de Tareas</h1>
