--- a/tareas/templates/tareas/registrar.html
+++ b/tareas/templates/tareas/registrar.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrar Tarea</title>
+    <link rel="stylesheet" href="{% static 'tareas/estilos.css' %}">
 </head>
 <body>
     <h1>Registrar nueva Tarea</h1>
