--- a/tareas/templates/tareas/lista.html
+++ b/tareas/templates/tareas/lista.html
@@ -11,18 +11,21 @@
 
     
     {% for tarea in tareas %}
-        <div class="tarjeta-tarea">
-            <h3>{{tarea.titulo}}</h3>
-            <p>{{tarea.descripcion}}</p>
-            <p class="fecha">⏳ Fecha límite: {{tarea.fecha_limite}}</p>
-
-            <div class="botones">
-                <a href="{% url 'editar_tarea' tarea.id%}" class="btn">✏️ Editar</a>
-                <a href="{% url 'eliminar_tarea' tarea.id%}" class="btn">🗑️ Eliminar</a>
-            </div>
+        <div class="tarjeta-tarea {% if tarea.completada %}completada{% endif %}">
+            <h3>{{ tarea.titulo }}</h3>
+            <p>{{ tarea.descripcion }}</p>
+            <p class="fecha">⏳ Fecha límite: {{ tarea.fecha_limite }}</p>
+        
+            {% if tarea.completada %}
+                <p><strong>✅ Completada</strong></p>
+            {% else %}
+                <div class="botones">
+                    <a href="{% url 'editar_tarea' tarea.id %}" class="btn">✏️ Editar</a>
+                    <a href="{% url 'eliminar_tarea' tarea.id %}" class="btn">🗑️ Eliminar</a>
+                    <a href="{% url 'marcar_completada' tarea.id %}" class="btn">✅ Completar</a>
+                </div>
+            {% endif %}
         </div>
-        {% empty %}
-            <p>No hay tareas pensientes. ¡Empieza agregando una! 📋</p>
     {% endfor %}
 
     <a href="{% url 'registrar_tarea' %}" class="btn">➕ agregar nueva tarea</a>
