--- a/tareas/templates/tareas/lista.html
+++ b/tareas/templates/tareas/lista.html
@@ -14,6 +14,9 @@
             <h3>{{ tarea.titulo }}</h3>
             <p>{{ tarea.descripcion }}</p>
             <p class="fecha">⏳ Fecha límite: {{ tarea.fecha_limite }}</p>
+            <div class="tipo-tarea tipo-{{ tarea.tipo }}">
+                {{ tarea.get_tipo_display }}
+            </div>            
             <div class="botones">
                 <a href="{% url 'editar_tarea' tarea.id %}" class="btn">✏️ Editar</a>
                 <a href="{% url 'eliminar_tarea' tarea.id %}" class="btn">🗑️ Eliminar</a>
@@ -34,6 +37,9 @@
             <h3>{{ tarea.titulo }}</h3>
             <p>{{ tarea.descripcion }}</p>
             <p class="fecha">⏳ Fecha límite: {{ tarea.fecha_limite }}</p>
+            <div class="tipo-tarea tipo-{{ tarea.tipo }}">
+                {{ tarea.get_tipo_display }}
+            </div>            
             <p><strong>Completada</strong></p>
         </div>
     {% endif %}
