--- a/tareas/templates/tareas/base.html
+++ b/tareas/templates/tareas/base.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{% static 'tareas/estilos.css' %}">
 </head>
 <body>
-    <div class="container">
+    <div class="container-app">
         {% block content %}{% endblock %}
     </div>
 </body>
