--- a/tareas/templates/tareas/editar.html
+++ b/tareas/templates/tareas/editar.html
@@ -8,7 +8,7 @@
 {% block content %}
     <h2>✏️ Editar Tarea</h2>
 
-    <form method="post">
+    <form method="post" class="formulario">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn-guardar">💾 Guardar cambios</button>
